<resources>
    <string name="app_name">MTG Counter</string>
    <string name="player_one_default_name">Jace</string>
    <string name="default_player_health">20</string>
    <string name="player_two_default_name">Chandra</string>
    <string name="player_three_default_name">Garruk</string>
    <string name="player_four_default_name">Liliana</string>
    <string name="change_name">Change your name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="player_dead">%s is dead.</string>
    <string name="new_game">New Game</string>
    <string name="two_players">Two Players</string>
    <string name="three_players">Three Players</string>
    <string name="four_players">Four Players</string>
    <string name="bluetooth_game">Bluetooth Game</string>
    <string name="two_headed_giant">Two Headed Giant</string>
    <string name="unable_to_connect">Unable to connect device</string>
    <string name="discover_device">Discover Device</string>
    <string name="bluetooth_dialog_title">Bluetooth Alert</string>
    <string name="no_bluetooth_on_device">No Bluetooth on this device</string>

    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Nearby Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="roll_die">Roll Die</string>
    <string name="roll">Roll</string>
    <string name="opponent">Opponent</string>
    <string name="no_device_connected">No device connected</string>
    <string name="connect_device">Connect Device</string>
    <string name="lorum_epsum">Lorum Epsum</string>
    <string name="no_name">No Name</string>
    <string name="coarse_access_refused">Coarse Location Access Refused</string>
    <string name="search">Search</string>

    <string name="cardview_transition">cardview transition string</string>
    <string name="game_title">Game</string>
    <string name="card_search">Card Search</string>
    <string name="power">Power:</string>
    <string name="toughness">Toughness:</string>
    <string name="card_text">Card Text</string>
    <string name="card_rulings">Card Rulings</string>

    <string name="rulings_text">%1$s\n\n</string>
    <string name="pair_device">Pair Device</string>
    <string name="no_paired_devices">No Paired Devices</string>
</resources>
