<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_paired_devices"
        android:background="@color/green_gray"
        android:textColor="@color/white"
        android:paddingStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:stackFromBottom="true"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/title_paired_devices"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"/>

    <TextView android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_other_devices"
        android:textColor="@color/white"
        android:paddingStart="5dp"
        android:layout_weight="3"
        app:layout_constraintTop_toBottomOf="@id/paired_devices"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/green_gray"
        android:elevation="5dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleSmall"
        android:id="@+id/bluetooth_searching_progress"
        android:visibility="invisible"
        android:paddingEnd="@dimen/padding_5dp"
        android:paddingStart="@dimen/padding_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_new_devices"
        android:elevation="5dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:stackFromBottom="true"
        android:layout_weight="2"
        app:layout_constraintTop_toBottomOf="@+id/title_new_devices"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"/>
    
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scan_button"
        app:layout_constraintTop_toBottomOf="@+id/new_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        android:text="@string/button_scan"
        android:paddingStart="@dimen/padding_5dp"
        android:paddingEnd="@dimen/padding_5dp"
        android:fontFamily="@font/medusa_gothic"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/scan_button"
        android:text="@string/cancel"
        android:fontFamily="@font/medusa_gothic"/>


</androidx.constraintlayout.widget.ConstraintLayout>
